--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <div class="table-wrap table-wrap--veh table-responsive nowrap" data-hint="1">
           <table class="table table-sm align-middle table-sticky-first">
             <thead class="table-light"><tr>
-              <th>Username</th><th>Role</th><th>Telegram ID</th><th>Change Pass</th><th>Aksi</th>
+              <th>Username</th><th>Role</th><th>Telegram ID</th><th>Aksi</th>
             </tr></thead>
             <tbody id="tblSetUsers"></tbody>
           </table>
@@ -565,6 +565,24 @@
           <button id="btnSaveConfig" class="btn btn-primary">Simpan Config</button>
           <button id="btnRefreshConfig" class="btn btn-outline-secondary">Reload</button>
         </div>
+        <!-- Test Telegram -->
+<hr>
+<div class="row g-2 align-items-end">
+  <div class="col-md-5">
+    <label class="form-label">Chat ID (opsional)</label>
+    <input id="tgTestChat" class="form-control" placeholder="Kosongkan untuk pakai Admin Chat ID">
+  </div>
+  <div class="col-md-5">
+    <label class="form-label">Pesan Uji</label>
+    <input id="tgTestText" class="form-control" value="Test notifikasi dari Armada Seriang">
+  </div>
+  <div class="col-md-2 d-grid">
+    <button id="btnTestTelegram" class="btn btn-outline-primary">Test Telegram</button>
+  </div>
+</div>
+<div class="form-text">
+  Pastikan bot sudah di-<em>Start</em> di Telegram, dan <b>Chat ID</b> benar.
+</div>
         <hr>
         <div class="alert alert-info small">
           Password disimpan dalam hash. Untuk setel ulang password, ubah via tabel user. (Demi keamanan, plaintext <em>tidak</em> disimpan.)
@@ -603,6 +621,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- App scripts (module order matters) -->
+   <script type="module" src="js/debug.js"></script>
   <script type="module" src="js/util.js"></script>
   <script type="module" src="js/notif.js"></script>
   <script type="module" src="js/store.js"></script>
@@ -671,6 +690,42 @@
     </div>
   </div>
 </div>
+
+<!-- Modal: Detail Tamu On-Trip per Kendaraan -->
+<div class="modal fade" id="mdlVehTrips" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h6 class="modal-title">
+          <i class="bi bi-truck-front me-2"></i><span id="vehTripsTitle">Kendaraan</span>
+        </h6>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <div id="vehTripsMeta" class="small text-muted mb-2"></div>
+        <div class="table-responsive">
+          <table class="table table-sm align-middle">
+            <thead class="table-light">
+              <tr>
+                <th style="width:56px; text-align:center">No</th>
+                <th>Nama Tamu</th>
+                <th>Order#Tamu</th>
+                <th>Berangkat</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody id="vehTripsBody"></tbody>
+          </table>
+        </div>
+        <div class="form-text">Tamu “on trip” = sudah berangkat & belum tiba.</div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-outline-secondary" data-bs-dismiss="modal">Tutup</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 </body>
 </html>
