--- a/index.html
+++ b/index.html
@@ -726,6 +726,15 @@
   };
 </script>
 
+<script type="importmap">
+{
+  "imports": {
+    "./api.js": "./api.js?v=2025-08-22a",
+    "js/api.js": "js/api.js?v=2025-08-22a"
+  }
+}
+</script>
+
   <!-- App scripts (module order matters) -->
    <script type="module" src="js/debug.js"></script>
   <script type="module" src="js/util.js"></script>
