--- a/index.html
+++ b/index.html
@@ -717,23 +717,21 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script>
-  // Pastikan global: ini menutup celah jika ada file lama yang masih memanggil isApproved_
-  window.isApproved_ = window.isApproved_ || function(v){
-    if (v === true || v === 1) return true;
-    var t = String(v == null ? '' : v).toUpperCase();
-    return (t === 'TRUE' || t === '1' || t === 'YA');
-  };
+<script>
+  // Wajib: buat *global binding* bernama `isApproved_`
+  // (bukan hanya property window) agar JSONP yang menyebut `isApproved_` tidak ReferenceError.
+  if (typeof isApproved_ !== 'function') {
+    // memakai 'var' atau 'function' declaration => menghasilkan binding global & property window
+    var isApproved_ = function(v){
+      if (v === true || v === 1) return true;
+      var t = String(v == null ? '' : v).toUpperCase();
+      return (t === 'TRUE' || t === '1' || t === 'YA');
+    };
+    // opsional: pastikan sinkron dengan window
+    window.isApproved_ = isApproved_;
+  }
 </script>
 
-<script type="importmap">
-{
-  "imports": {
-    "./api.js": "./api.js?v=2025-08-22a",
-    "js/api.js": "js/api.js?v=2025-08-22a"
-  }
-}
-</script>
 
   <!-- App scripts (module order matters) -->
    <script type="module" src="js/debug.js"></script>
