--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Armada Manager – Seriang</title>
+  <script>
+  // HARUS: bikin *global variable* bernama isApproved_ (bukan sekadar window.prop)
+  // agar JSONP yang menyebut `isApproved_` tidak ReferenceError.
+  if (typeof isApproved_ !== 'function') {
+    function isApproved_(v){
+      if (v === true || v === 1) return true;
+      var t = String(v == null ? '' : v).toUpperCase();
+      return (t === 'TRUE' || t === '1' || t === 'YA');
+    }
+    // sinkronkan ke window (opsional)
+    window.isApproved_ = isApproved_;
+  }
+</script>
 
   <!-- Bootstrap CSS & Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -717,26 +730,15 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-  if (typeof isApproved_ !== 'function') {
-    var isApproved_ = function(v){
-      if (v === true || v === 1) return true;
-      var t = String(v == null ? '' : v).toUpperCase();
-      return (t === 'TRUE' || t === '1' || t === 'YA');
-    };
-    window.isApproved_ = isApproved_;
-  }
-</script>
-
 
   <!-- App scripts (module order matters) -->
    <script type="module" src="js/debug.js"></script>
   <script type="module" src="js/util.js"></script>
   <script type="module" src="js/notif.js"></script>
   <script type="module" src="js/store.js"></script>
-  <script type="module" src="js/api.js"></script>
+  <script type="module" src="js/api.js?v=2025-08-22b"></script>
   <script type="module" src="js/auth.js"></script>
-  <script type="module" src="js/ui.js"></script>
+  <script type="module" src="js/ui.js?v=2025-08-22b"></script>
   <script type="module" src="js/order.js"></script>
   <script type="module" src="js/vehicles.js"></script>
   <script type="module" src="js/approvals.js"></script>
@@ -744,7 +746,7 @@
   <script type="module" src="js/cashier.js"></script>
   <script type="module" src="js/journal.js"></script>
   <script type="module" src="js/settings.js"></script>
-  <script type="module" src="js/myorder.js"></script>
+  <script type="module" src="js/myorder.js?v=2025-08-22b"></script>
   <script type="module" src="js/dashboard.js"></script>
 
   <style>
