--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
               <div class="d-grid">
                 <button id="btnLogin" class="btn btn-primary">Masuk</button>
               </div>
-              <div class="form-text mt-3">
-                User Default: <code>admin/admin</code>.
-              </div>
+              <div class="mt-3"><span class="text-muted">Belum punya akun?</span><a href="#" data-route="register" class="ms-1">Daftar</a></div>
+              <hr />
+              <small class="text-muted">Notifikasi Via Telegram <a style="text-decoration: underline; color:#020202;" href="http://t.me/roda_kmpBot">Armada KMP</a></small>
             </div>
           </div>
         </div>
