--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="d-grid">
                 <button id="btnLogin" class="btn btn-primary">Masuk</button>
               </div>
-              <div class="mt-3"><span class="text-center">Belum punya akun?</span><a href="#" data-route="register" class="ms-1">Daftar</a></div>
+              <div class="text-center mt-3"><span class="text-muted">Belum punya akun?</span><a href="#" data-route="register" class="ms-1">Daftar</a></div>
               <hr />
               <small class="text-muted">Notifikasi Via Telegram <a style="text-decoration: underline; color:#020202;" href="http://t.me/roda_kmpBot">Armada KMP</a></small>
             </div>
