--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- App CSS -->
   <link rel="stylesheet" href="assets/app.css">
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Ctext y='54' x='6' font-size='56'%3E🚐%3C/text%3E%3C/svg%3E" />
 
   <!-- XLSX & jsPDF -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
